Bug 89391 - Datasource URL in Database Properties window cannot be viewed (or edited)
Summary: Datasource URL in Database Properties window cannot be viewed (or edited)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Szymon Kłos
URL:
Whiteboard: target:4.5.0 target:4.4.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-02-15 03:43 UTC by frofa
Modified: 2015-03-06 11:14 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description frofa 2015-02-15 03:43:18 UTC
On all my existing 'split' mode databases which use Base to connect to external jdbc HSQLDB databases, the Datasource URL in Database Properties cannot be edited - see screenshot attached. I believe this problem materialized after I upgraded LO 4.4.0.3 (on Mac OSX 10.10). 

Steps to reproduce:

1. Open any Base database configured in 'split mode' as a Base .odb file connected to an external HSQLDB version 2.3.x database (i.e. double-click on the associated .odb file)

2. Choose Database>Properties from the EDIT menu

3. Under the heading ADVANCED PROPERTIES, the Datasource URL panel (at the top) is BLANK where the expected URL should be. (There is only the prefix jdbc: partly visible at the beginning of the field, but no URL visible)

4. Prior to upgrading my MacOSX 10.10 instal LibreOffice to version 4.4.0.3 I was able to see the following data URL after the prefix 'jdbc:' (for example):

hsqldb:file:~/Databases/cas_correspondence_log_db/cas_correspondence_log;default_schema=true;shutdown=true;hsqldb.default_table_type=cached;get_column_name=false

5. During the initial setup procedure, The JDBC connection lets me enter the correct Datasource URL, and this information is visible when the following alternative steps are followed:

 - Choose Database>Connection Type... from the EDIT menu

 - click the Next>> button in the bottom row of buttons in the resulting window (titled Data Source Properties: JDBC)

 - Under the heading General Datasource URL the panel correctly shows the datasource as per the example given in step 4 above.
 
So, to summarize, the problem only affects the display and editing of the Datasource URL information in the Database>Properties window, but it does NOT effect this same information in the Database>Connection Type... window. The database itself functions normally.
Comment 1 Alex Thurgood 2015-02-23 17:43:33 UTC
Confirming.

I see it also with a JDBC connector to a mysql database.

OSX 10.10.2

Tested on 

Version: 4.5.0.0.alpha0+
Build ID: e1ef9e9999b1d9256a803abb59c9b70e4690f8be
Locale: fr_
Comment 2 Alex Thurgood 2015-02-23 17:45:29 UTC
Possibly a victim of the UI rework, since the connection strings themselves are still present, but don't display correctly.
Comment 3 Julien Nabet 2015-02-23 22:37:45 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
I lost myself in different calls of dbaui::OConnectionTabPage::implInitControls, dbaui::OConnectionHelper::impl_setURL, etc.
Badfully, not enough low hanging fruit for me.
Comment 4 Lionel Elie Mamane 2015-03-04 11:22:31 UTC
Szymon, since you did that part of the UI rework, could you please take a look at this bug? Thank you in advance.

Or David Tardon, since uou reviewed it ;)
Comment 5 Robinson Tryon (qubit) 2015-03-05 16:26:06 UTC
Whiteboard -> bibisectRequest
Comment 6 Adolfo Jayme Barrientos 2015-03-06 06:45:01 UTC
Removing bibisectRequest. I doubt its usefulness in this case as there’s already a patch in Gerrit waiting for review. Szymon is fast ;)
Comment 7 Julien Nabet 2015-03-06 06:52:17 UTC
Just for the record, here's his patch: 
https://gerrit.libreoffice.org/#/c/14766/
Comment 8 Commit Notification 2015-03-06 11:12:16 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1ac9985ade97f91869a11ce45231ffd6a5440959

tdf#89391 : Datasource URL in Database Properties window cannot be viewed

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Lionel Elie Mamane 2015-03-06 11:14:31 UTC
Thanks Szymon!
Comment 10 Commit Notification 2015-03-06 11:14:45 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ace7ee616e7a38f7c626a74e680b928832c78df&h=libreoffice-4-4

tdf#89391 : Datasource URL in Database Properties window cannot be viewed

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.