tdf#89391 : Datasource URL in Database Properties window cannot be viewed

Change-Id: Ia3e978e3fd9c0ce19ec679c41d40a34338147c37